# snowman-py

./: .env.sample  .gitignore  404.html  Cargo.toml  README.md  index.html  mkdocs.yml  pyproject.toml  sample.py  sitemap.xml  snowman.code-workspace  snowman.schema.json  snowman.toml  snowq.code-workspace  snowq.toml
.github/workflows/: CI.yml  artifacts_cleanup.yml  ci_python.yml  ci_rust.yml  docs.yml  pr_agent.yml  release.yml  rust_ci.yml
crates/snowman/: Cargo.toml
crates/snowman/src/: app.rs  command.rs  config.rs  formatter.rs  main.rs
crates/snowman/src/command/: config.rs  init.rs  model.rs  snowman.rs
crates/snowman/src/command/config/: create.rs  print.rs
crates/snowman/src/command/model/: diff.rs  generate.rs
crates/snowman_config/: Cargo.toml
crates/snowman_config/src/: error.rs  lib.rs
crates/snowman_connector/: Cargo.toml
crates/snowman_connector/src/: lib.rs  parameters.rs  query.rs
crates/snowman_connector/src/query/: get_databases.rs  get_parameters.rs  get_schemas.rs
crates/snowman_generator/: Cargo.toml
crates/snowman_generator/src/: error.rs  lib.rs  pydantic.rs  traits.rs
crates/snowman_generator/src/model/: insert_typeddict.rs  pydantic.rs  update_typeddict.rs
crates/snowman_generator/tests/: schema_test.rs
crates/snowq/: Cargo.toml
crates/snowq-config/: Cargo.toml
crates/snowq-config/src/: lib.rs
crates/snowq-connector/: Cargo.toml
crates/snowq-connector/src/: lib.rs  query.rs  schema.rs
crates/snowq-connector/src/query/: get_schema_infomations.rs  schema_infomations.rs
crates/snowq-connector/src/schema/: column.rs  table.rs
crates/snowq-rs/: Cargo.toml
crates/snowq-rs/src/: app.rs  command.rs
crates/snowq-rs/src/command/: config_print.rs  schema.rs  schema_sync.rs
crates/snowq/src/: app.rs  command.rs  config.rs  main.rs
crates/snowq/src/command/: config.rs  config_print.rs  model.rs  model_generate.rs  new.rs  schema.rs  schema_generate.rs  schema_sync.rs  snowq.rs  snowq_completion.rs
crates/snowq/src/command/config/: create.rs  print.rs
crates/snowq/src/command/model/: generate.rs
crates/snowq/src/command/snowq/: completion.rs
crates/snowq_config/: Cargo.toml
crates/snowq_config/src/: error.rs  lib.rs
crates/snowq_connector/: Cargo.toml
crates/snowq_connector/src/: error.rs  lib.rs  query.rs
crates/snowq_connector/src/query/: get_schema_infomations.rs  get_schemas.rs
crates/snowq_connector/src/schema/: column.rs
crates/snowq_generator/: Cargo.toml
crates/snowq_generator/src/: insert_typeddict.rs  lib.rs  pydantic.rs  update_typeddict.rs
data/: delete_query.py  delete_query_build.py  insert_query_build.py  insert_query_executemany.py  select_query.py  truncate_query.py  truncate_query_build.py  update_query.py  where_clause_condition.py  where_clause_lambda_function.py  where_clause_string.py
data/your/database/: _schema.py  schema.py
docs/: config.schema.json  index.md  snowman.schema.json
docs/data/: delete_query.py  delete_query_build.py  insert_query.py  insert_query_build.py  insert_query_executemany.py  model_generate.py  model_schema.sql  select_query_build.py  truncate_query.py  truncate_query_build.py  update_query.py  update_query_build.py  where_clause_condition.py  where_clause_lambda_function.py  where_clause_lambda_function_self.py
docs/data/my_database/: _my_schema.py  my_schema.py
docs/data/your/: snowflake.py
docs/data/your/database/: _schema.py  aaaschema.py  schema.py  schema.sql
docs/guide/: installation.md  query_builder.md
docs/guide/cli_tool/: configuration.md  index.md
docs/guide/query_builder/: data_type.md  index.md
examples/readme_sample/: README.md  pyproject.toml
examples/readme_sample/src/your/: delete_sample.py  insert_sample.py  truncate_sample.py  update_sample.py
examples/readme_sample/src/your/database/: schema.py
examples/snowman_sample/: .gitignore  README.md  pyproject.toml  snowman.toml
examples/snowq_sample/: .gitignore  README.md  pyproject.toml  snowq.toml
examples/snowq_sample/src/snowq_sample/: __init__.py
guide/cli_tool/: index.html
guide/cli_tool/configuration/: index.html
guide/installation/: index.html
guide/query_builder/: index.html
guide/query_builder/data_type/: index.html
python/src/snowman/: __init__.py  _cursor.py  _features.py  _generic.py  datatype.py  exception.py  pydantic.py  typing.py
python/src/snowman/context/: where_context.py
python/src/snowman/query/: __init__.py  column.py  expression.py  minify.py  order_item.py  to_sql.py
python/src/snowman/relation/: __init__.py  table.py  table_like.py  view.py
python/src/snowq/: __init__.py  _features.py  cursor.py  exception.py
python/src/snowq/query/: __init__.py
python/src/snowq/relation/: __init__.py
python/src/snowq/schema/: __init__.py  table.py
python/tests/: conftest.py  test_delete.py  test_insert.py  test_snowman.py  test_snowq.py  test_table.py  test_truncate.py  test_update.py
python/tests/query/: test_column.py  test_order_item.py
rust/snowman/src/: app.rs  command.rs  config.rs  database.rs
rust/snowman_config/: Cargo.toml
rust/snowman_config/src/: error.rs  lib.rs
rust/snowman_connector/src/: error.rs  lib.rs  query.rs  schema.rs
rust/snowman_generator/src/: formatter.rs  lib.rs  model.rs  sql.rs  traits.rs
rust/snowman_generator/tests/: schema_test.rs
search/: search_index.json
snowman-py/: README.md
snowman-py/src/snowman/: __init__.py
snowq-py/: pyproject.toml
snowq-py/src/snowq/: __init__.py
snowq-py/src/snowq/_decorator/: _table.py
snowq-py/src/snowq/query/: __init__.py
snowq-py/src/snowq/query/_builder/: _builder.py  _insert_query_builder.py  _update_query_builder.py
snowq-py/src/snowq/schema/: __init__.py  external_table.py  table.py
snowq-py/tests/: conftest.py  test_insert.py  test_update.py
src/snowman/: __init__.py
src/snowman/_decorator/: _table.py
src/snowman/protocol/: connection.py  cursor.py
src/snowman/query/: __init__.py
src/snowman/schema/: materiarized_view.py
tests/: conftest.py  test_insert_into.py  test_update.py
(+93 files in other folders)
