[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["yassun7010 <yassun7010@outlook.com>"]
license = "MIT"

[workspace.dependencies]
openssl = { version = "0.10.64", features = ["vendored"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
thiserror = "^1.0"
tokio = { version = "^1.37", features = ["full"] }
toml = { version = "^0.8", features = ["preserve_order"] }
log = "^0.4"
