[project]
name = "snowman-py"
version = "0.0.30"
description = "Python model and query builder for Snowflake."
authors = [{ name = "yassun7010", email = "yassun7010@outlook.com" }]
dependencies = [
    "typing-extensions>=4.12.0",
    "snowflake-connector-python>=3.10.1",
    "pydantic>=2.7.1",
]
readme = "README.md"
requires-python = ">= 3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[tool.maturin]
bindings = "bin"
manifest-path = "rust/snowman/Cargo.toml"
module-name = "snowman"
python-source = "python/src"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.1",
    "pyright>=1.1.361",
    "ruff>=0.4.3",
    "turu[snowflake]>=0.11.1",
    "pyarrow-stubs>=10.0.1.7",
    "pandas-stubs>=2.2.1.240316",
    "pytest-mock>=3.14.0",
    "pip>=24.0",
    "pandas>=2.2.2",
    "pyarrow>=16.1.0",
    "mkdocs>=1.6.0",
    "mkdocs-material[imaging]>=9.5.26",
    "mkdocs-plugin-inline-svg>=0.1.0",
    "mkdocs-exclude>=1.0.2",
    "mkdocstrings[python]>=0.25.1",
    "griffe>=0.45.3",
    "griffe-inherited-docstrings>=1.0.0",
    "mkdocs-awesome-pages-plugin>=2.9.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/snowman"]

[tool.rye.scripts]
format = "rye format"
lint = "rye lint --fix"
typecheck = "pyright python/src/** python/tests/** docs/data/**"
test = "rye test"
ci = { chain = ["format", "lint", "typecheck", "test"] }
generate-sample-model = "cargo run --bin generate_sample_model docs/data"
schema = "cargo run --bin jsonschema docs"
docs-serve = { chain = ["generate-sample-model", "format", "mkdocs serve"] }
docs-publish = "mkdocs gh-deploy --force"

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning:snowflake"]
addopts = "--doctest-modules"
norecursedirs = ["site", "examples"]
