[project]
name = "snowq"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "yassun7010", email = "yassun7010@outlook.com" }]
dependencies = [
    "typing-extensions>=4.11.0",
    "snowflake-connector-python>=3.10.0",
    "pydantic>=2.7.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.0",
    "pyright>=1.1.361",
    "taskipy>=1.12.2",
    "ruff>=0.4.3",
    "turu[snowflake]>=0.10.5",
    "pyarrow-stubs>=10.0.1.7",
    "pandas-stubs>=2.2.1.240316",
    "pytest-mock>=3.14.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/snowq"]

[tool.taskipy.tasks]
format = "ruff format ."
lint = "ruff check --fix ."
typecheck = "pyright src/** tests/**"
test = "pytest"
ci = "task format && task lint && task typecheck && task test"
