[package]
name = "snowman_config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace = true
schemars = "0.8.21"
serde_json.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
