[package]
name = "snowman_generator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snowman_connector.workspace = true

convert_case.workspace = true
itertools.workspace = true
thiserror.workspace = true
