[package]
name = "snowq"
description = "snowflake schema builder for snowq."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
tokio.workspace = true
snowq-connector = { version = "0.1.0", path = "../snowq-connector" }
