[package]
name = "snowq"
description = "snowflake schema builder for snowq."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
tokio.workspace = true
snowq_connector.workspace = true
snowq_config.workspace = true
snowq_generator.workspace = true
openssl.workspace = true
dotenvy = "0.15.7"
askama = "0.12.1"
futures = "0.3.30"
serde_json = { workspace = true }
