[package]
name = "snowq"
description = "snowflake schema builder for snowq."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
askama = "0.12.1"
convert_case.workspace = true
clap = { version = "4.5.4", features = ["derive"] }
dotenvy = "0.15.7"
futures = "0.3.30"
openssl.workspace = true
serde_json = { workspace = true }
snowq_config.workspace = true
snowq_connector.workspace = true
snowq_generator.workspace = true
tokio.workspace = true
itertools = "0.13.0"
anyhow = { version = "1.0.86", features = ["backtrace"] }
clap_complete = "4.5.2"
clap_complete_nushell = "4.5.1"
