[package]
name = "snowq_config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
log.workspace = true
