[package]
name = "snowq_connector"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json.workspace = true
snowflake-connector-rs = "^0.4.0"
openssl.workspace = true
thiserror.workspace = true
