[project]
name = "readme-sample"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "yassun7010", email = "yassun7010@outlook.com" }]
dependencies = ["snowq @ file:///${PROJECT_ROOT}/examples/readme_sample/../.."]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/your"]
