[project]
name = "snowman-sample"
version = "0.0.5"
description = "Add your description here"
authors = [{ name = "yassun7010", email = "yassun7010@outlook.com" }]
dependencies = [
    "pydantic>=2.7.1",
    "snowman @ file:///${PROJECT_ROOT}/examples/snowman_sample/../..",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/snowman_sample"]
